bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: type boolen
var x:boolen = false 
      ^